Melhorias nos blocos DHT

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -158,9 +158,12 @@
       </category>
       <category name="DHT" colour="#2e8a2e">
         <block type="dht_init"></block>
+        <block type="dht_begin"></block>
         <sep></sep>
         <block type="dht_temperature"></block>
         <block type="dht_humidity"></block>
+        <block type="dht_heat_index">
+        </block>
       </category>
     </category>
   </xml>
