Implementação do sensor BH1750

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -123,6 +123,7 @@
       <block type="library_adafruit"></block>
       <block type="library_sensor"></block>
       <block type="library_bmp180"></block>
+      <block type="library_bh1750"></block>
       <block type="library_mpu6050"></block>
       <block type="library_dht"></block>
     </category>
@@ -155,6 +156,14 @@
         <block type="bmp180_temperature"></block>
         <block type="bmp180_pressure"></block>
         <block type="bmp180_altitude"></block>
+      </category>
+      <category name="BH1750" colour="#ffcc00">
+        <block type="bh1750_init"></block>
+        <block type="bh1750_begin"></block>
+        <sep></sep>
+        <block type="bh1750_set_mode"></block>
+        <sep></sep>
+        <block type="bh1750_light_level"></block>
       </category>
       <category name="DHT" colour="#2e8a2e">
         <block type="dht_init"></block>
