Primeira construção do novo sensor

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -120,10 +120,10 @@
       <sep></sep>
       <block type="library_wire"></block>
       <sep></sep>
-      <block type="library_adafruit"></block>
       <block type="library_sensor"></block>
       <block type="library_bmp180"></block>
       <block type="library_bh1750"></block>
+      <block type="library_hmc5883"></block>
       <block type="library_mpu6050"></block>
       <block type="library_dht"></block>
     </category>
@@ -164,6 +164,9 @@
         <block type="bh1750_set_mode"></block>
         <sep></sep>
         <block type="bh1750_light_level"></block>
+      </category>
+      <category name="HMC5883" colour="#8a2e8a">
+        <!-- Blocos do sensor HMC5883 (magnetômetro/bússola) serão adicionados aqui -->
       </category>
       <category name="DHT" colour="#2e8a2e">
         <block type="dht_init"></block>
