Implementation blocks for HMC

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -198,6 +198,7 @@
         <sep></sep>
         <!-- Informações do sensor -->
         <block type="hmc5883_sensor_info"></block>
+        <block type="hmc5883_display_sensor"></block>
       </category>
       <category name="DHT" colour="#2e8a2e">
         <block type="dht_init"></block>
