--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -94,6 +94,7 @@
       <block type="math_number"><field name="NUM">0</field></block>
       <block type="math_arithmetic"></block>
       <block type="math_boolean"></block>
+      <block type="math_pi"></block>
     </category>
     <category name="Texto" colour="#5C7CFA">
       <block type="text"></block>
