--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -132,6 +132,7 @@
       <block type="library_arduino_basic"></block>
       <sep></sep>
       <block type="library_wire"></block>
+      <block type="library_math"></block>
       <sep></sep>
       <block type="library_sensor"></block>
       <block type="library_bmp180"></block>
