--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -109,13 +109,41 @@
     </category>
     <category name="Variáveis" colour="#00cfe5">
       <button text="➕ Criar Nova Variável" callbackKey="CREATE_VARIABLE"></button>
-    </category>
-    <category name="Listas" colour="#00cfe5">
+      <block type="int_declaration">
+        <value name="VALUE">
+          <shadow type="math_number"><field name="NUM">0</field></shadow>
+        </value>
+      </block>
+      <block type="float_declaration">
+        <value name="VALUE">
+          <shadow type="math_number"><field name="NUM">0.0</field></shadow>
+        </value>
+      </block>
+      <block type="bool_declaration">
+        <value name="VALUE">
+          <shadow type="logic_boolean"><field name="BOOL">TRUE</field></shadow>
+        </value>
+      </block>
+      <block type="string_declaration">
+        <value name="VALUE">
+          <shadow type="text"><field name="TEXT">texto</field></shadow>
+        </value>
+      </block>
+      <sep></sep>
+      <block type="int_variable_get"></block>
+      <block type="int_variable_set">
+        <value name="VALUE">
+          <shadow type="math_number"><field name="NUM">0</field></shadow>
+        </value>
+      </block>
+      <sep></sep>
       <block type="variable_declaration">
         <value name="VALUE">
           <shadow type="math_number"><field name="NUM">0</field></shadow>
         </value>
       </block>
+    </category>
+    <category name="Listas" colour="#00cfe5">
     </category>
     <category name="Funções" colour="#e80074" custom="PROCEDURE">
     </category>
